--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    sdkVersion = '0.0.12'
+    sdkVersion = '0.0.13'
     sdkGroup = 'com.github.notix-push'
     artifactId = 'inapp-android-sdk'
 }
@@ -71,9 +71,8 @@ dependencies {
         exclude group: "org.apache.httpcomponents", module: "httpclient"
         exclude group: "org.apache.httpcomponents", module: "httpcore"
     }
-
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 afterEvaluate {
