--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    sdkVersion = '0.0.21'
+    sdkVersion = '0.0.22'
     sdkGroup = 'com.github.notix-push'
     artifactId = 'inapp-android-sdk'
 }
@@ -19,8 +19,6 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
-        versionCode 21
-        versionName "$sdkVersion"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -52,12 +50,10 @@ android {
 dependencies {
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:multidex:2.0.1'
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -73,6 +69,12 @@ dependencies {
     }
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation "androidx.browser:browser:1.4.0"
+
+    // images
+    implementation "io.coil-kt:coil:2.1.0"
+    implementation "com.github.Commit451.coil-transformations:transformations:2.0.2"
+    implementation "androidx.palette:palette-ktx:1.0.0"
 }
 
 afterEvaluate {
