--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    sdkVersion = '0.0.27'
+    sdkVersion = '0.0.28'
     sdkGroup = 'com.github.notix-push'
     artifactId = 'inapp-android-sdk'
 }
@@ -19,17 +19,21 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
-
+        versionName "$sdkVersion"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
     }
 
     buildTypes {
+        debug{
+            resValue "string", "sdk_version", "$sdkVersion"
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             multiDexEnabled true
+            resValue "string", "sdk_version", "$sdkVersion"
         }
     }
     compileOptions {
@@ -50,24 +54,23 @@ android {
 dependencies {
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation ('com.google.firebase:firebase-messaging:23.0.6') {
+    implementation ('com.google.firebase:firebase-messaging:23.0.2') {
         exclude group: "org.apache.httpcomponents", module: "httpclient"
         exclude group: "org.apache.httpcomponents", module: "httpcore"
     }
-    implementation ('com.google.firebase:firebase-core:21.1.0') {
+    implementation ('com.google.firebase:firebase-core:20.1.2') {
         exclude group: "org.apache.httpcomponents", module: "httpclient"
         exclude group: "org.apache.httpcomponents", module: "httpcore"
     }
-    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.android.volley:volley:1.2.1'
     implementation "androidx.browser:browser:1.4.0"
 
