--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    sdkVersion = '0.0.32'
+    sdkVersion = '0.0.33'
     sdkGroup = 'com.github.notix-push'
     artifactId = 'inapp-android-sdk'
 }
@@ -26,7 +26,7 @@ android {
     }
 
     buildTypes {
-        debug{
+        debug {
             resValue "string", "sdk_version", "$sdkVersion"
         }
         release {
@@ -55,31 +55,23 @@ dependencies {
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation ('com.google.firebase:firebase-messaging:23.0.2') {
+    implementation('com.google.firebase:firebase-messaging:23.0.2') {
         exclude group: "org.apache.httpcomponents", module: "httpclient"
         exclude group: "org.apache.httpcomponents", module: "httpcore"
     }
-    implementation ('com.google.firebase:firebase-core:20.1.2') {
+    implementation('com.google.firebase:firebase-core:20.1.2') {
         exclude group: "org.apache.httpcomponents", module: "httpclient"
         exclude group: "org.apache.httpcomponents", module: "httpcore"
     }
     implementation 'com.android.volley:volley:1.2.1'
     implementation "androidx.browser:browser:1.4.0"
-
-    // images
-    implementation "io.coil-kt:coil:2.1.0"
-    implementation "com.github.Commit451.coil-transformations:transformations:2.0.2"
     implementation "androidx.palette:palette-ktx:1.0.0"
-
-    // coroutines
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
 
 afterEvaluate {
