--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,27 @@
     package="com.notix.notixsdk">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
-        <!--service
+        <!--
+        service
             android:name="com.notix.notixsdk.NotixFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service-->
-
+        </service
+        -->
+        <activity
+            android:name=".NotificationsPermissionsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".NotificationClickHandlerActivity"
             android:exported="false" />
-
         <activity
             android:name=".interstitial.InterstitialActivity"
             android:exported="false"
