--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </service
         -->
         <activity
-            android:name=".NotificationsPermissionsActivity"
+            android:name=".push.permissions.NotificationsPermissionActivity"
             android:exported="false"
             android:theme="@style/Theme.Transparent" />
         <activity
