--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    sdkVersion = '0.0.41'
+    sdkVersion = '0.0.42'
     sdkGroup = 'com.github.notix-push'
     artifactId = 'inapp-android-sdk'
 }
@@ -68,10 +68,11 @@ dependencies {
         exclude group: "org.apache.httpcomponents", module: "httpclient"
         exclude group: "org.apache.httpcomponents", module: "httpcore"
     }
-    implementation 'com.android.volley:volley:1.2.1'
     implementation "androidx.browser:browser:1.4.0"
     implementation "androidx.palette:palette-ktx:1.0.0"
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
 }
 
 afterEvaluate {
